objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>